# mimir

./: .gitignore  ASSIGNMENT_PREP.md  README.md  follow_logs.sh  package-lock.json  pyproject.toml  run.sh
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml  rebuild_and_run.sh  test.db  update_openapi.sh
backend/ai_docs/: BACKEND_DESIGN.md  IMPLEMENTATION_TODO.md
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_add_completed_at.py  0003_connector_token_fields.py  0004_add_priority_factors.py  b8e74ba51bb6_add_jobs_table.py
backend/app/: config.py  deps.py  main.py  models.py  schemas.py
backend/app/db/: __init__.py
backend/app/routes/: connectors.py  dev.py  graph.py  health.py  oauth.py  tasks.py
backend/app/services/: agents.py  crypto.py  embeddings.py  graph.py  ingest.py  normalization.py  prioritise.py  sse.py
backend/app/services/connectors/: base.py
backend/app/worker/: __init__.py  tasks.py
backend/tests/: test_agents.py  test_health.py  test_integration.py
frontend/: .env.example  README.md  next.config.js  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/ai_docs/: DESIGN.md  IMPLEMENTATION_TODO.md  PRODUCT_BRIEF.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-shell.tsx  circular-nav-button.tsx  connector-card.tsx  graph-canvas.tsx  health-badge.tsx  loader.tsx  success-ring.tsx  task-card.tsx  task-detail.tsx  task-overlay.tsx
frontend/lib/: analytics.ts  (+7 more)
(+5 files in other folders)
