[project]
name = "mimir-backend"
version = "0.1.0"
description = "Mimir backend FastAPI service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [ { name = "Mimir" } ]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "authlib>=1.3.0",
  "celery[redis]>=5.4.0",
  "redis>=5.0.4",
  "chromadb>=0.5.0",
  "crewai>=0.51.0",
  "litellm>=1.40.10",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "alembic>=1.13.1",
  "cryptography>=42.0.7",
  "orjson>=3.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "black",
  "ruff",
  "types-redis",
  "types-requests"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "C4", "TID", "Q", "W"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]
